--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "cra-template": "1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-hook-form": "^6.8.2",
+    "react-hook-form-resolvers": "0.0.1",
+    "react-scripts": "3.4.3",
+    "simplebar-react": "^3.0.0-beta.5"
   },
   "scripts": {
     "start": "react-scripts start",
